tests/scripts/type_errors/duplicate_fields.roto
type Foo { a: u32, a: u32 }

filter foo() {
	accept
}
